<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="description_post_attachment">Post attachment</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_new_post">%1$s published new post:</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="button_new_entries">new entries</string>
    <string name="menu_save">Save</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="hint_type_login">Type login</string>
    <string name="hint_type_password">Type password</string>
    <string name="hint_type_user_name">Type user name</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="error_sign_in">this action needs sign in to your account</string>
    <string name="action_sign_in">Sign_in</string>
    <string name="exit_message_are_you_sure">Are you sure you want to logout?</string>
    <string name="dialog_title_exit">Exit</string>
    <string name="dialog_positive_button_text">Yes</string>
    <string name="dialog_negative_button_text">No</string>
    <string name="dialog_title_sign_in">This action is available for authorized person only</string>
    <string name="sign_in_message_are_you_sure">Sign in to your account?</string>
    <string name="error_passwords_must_match">Passwords must match</string>
    <string name="error_empty_login_or_pass">Fields \"Login\" and \"Password\" must not be empty</string>
    <string name="toast_text_successful_register">Successful registration</string>
    <string name="toast_text_successful_sign_in">Successful sign in</string>
    <string name="error_empty_text_fields">All fields must be filled in</string>
    <string name="error_check_network_connection">Check your network connection and try again</string>
    <string name="error_login_or_pass_unknown">Make sure the username and password you entered are correct</string>
    <string name="error_login_is_occupied">Login is occupied. Try another one</string>
    <string name="button_retry">Retry</string>
</resources>